# fishstick

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  agents.md
scripts/: README.md  setup_third_party.sh
src/: main.cpp
src/chat/completion/: client.cpp  client.hpp  types.hpp
