# -----------------------------------------------------------------------------
# 1. CMake 版本要求
# -----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# -----------------------------------------------------------------------------
# 2. 项目信息
# -----------------------------------------------------------------------------
project(MyChatCompletionProject CXX)

# -----------------------------------------------------------------------------
# 3. 编译器和标准设置
# -----------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# -----------------------------------------------------------------------------
# 4. 启用 compile_commands.json 生成 (用于 Clangd / Cpptools)
# -----------------------------------------------------------------------------
# 【非常重要】这行指令告诉 CMake 生成编译数据库文件
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# -----------------------------------------------------------------------------
# 5. 定义头文件搜索路径
# -----------------------------------------------------------------------------
include_directories(src)

# -----------------------------------------------------------------------------
# 6. 收集源文件
# -----------------------------------------------------------------------------
set(PROJECT_SOURCES
    src/main.cpp
    src/chat/completion/client.cpp
)

# -----------------------------------------------------------------------------
# 7. 构建可执行文件
# -----------------------------------------------------------------------------
add_executable(my_app ${PROJECT_SOURCES})